# automata-theory

lab1/: .gitignore  CMakeLists.txt  factory.cpp  field.h  lex.yy.cc  lexer.cpp  lexer.h  main.cpp  regex.cpp  regex.h  timing.cpp  tokens.h
lab1/lexer/: lex.yy.cc  lexer.cpp  lexer.h  lexer.l
lab1/regex/: regex.cpp  regex.h
lab1/smc/: smc-fields.cpp  smc-fields.h  smc.cpp  smc.h  smc.sm  smc_sm.cpp  smc_sm.h
lab1/src/: factory.h  field.h  irecognizer.h  relation.h
lab1/tests/: CMakeLists.txt  test.cpp
lab2/: go.mod  main.go
lab2/dfa-pckg/: complement.go  dfa.go  dfa_test.go  fa_conversion_test.go  inversion.go  isomorphic.go  k-path.go  min-dfa.go  min_dfa_test.go
lab2/nfa-pckg/: match_capture.go  nfa.go  ops_test.go
lab2/synt-tree-pckg/: tree.go
lab2/synttree-pckg/: tree.go  tree_test.go
